kubernetes/ingress/ejercicios/ejercicio1.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ing-lab1
  labels:
    name: ing-lab1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-a
  labels:
    app: web-a
  namespace: ing-lab1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-a
  template:
    metadata:
      labels:
        app: web-a
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        command: ["sh","-c","echo A > /usr/share/nginx/html/index.html; nginx -g 'daemon off;' "]
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-b
  labels:
    app: web-b
  namespace: ing-lab1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-b
  template:
    metadata:
      labels:
        app: web-b
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        command: ["sh","-c","echo B > /usr/share/nginx/html/index.html; nginx -g 'daemon off;' "]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-a
  namespace: ing-lab1
spec:
  selector:
    app: web-a
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-b
  namespace: ing-lab1
spec:
  selector:
    app: web-b
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: ing-lab1
spec:
  ingressClassName: nginx
  rules:
  - host: a.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-a
            port:
              number: 80
  - host: b.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-b
            port:
              number: 80
